Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-126316

Wrong timing for animations in XR

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.8.1, 6.8, 6.9.0 FF, 6.9
    • 6.8
    • Quick: 3D
    • None
    • 0426f2ba1 (dev), 992d29c96 (6.8)

    Description

      If there are no animations already running, the progression of an animation in XR will be calculated from the time the application started instead of when the animation was started. This means that e.g. a Behavior on a property will normally be ignored, and the value will immediately jump to the final value

      The root cause is that QQuick3DXrAnimationDriver::elapsed() returns the time since the app was started.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            tvete Paul Olav Tvete
            tvete Paul Olav Tvete
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes