XR: start animations at 0

The first animation started will get its start time from the animation
driver's elapsed() function. Therefore, make sure that the driver
starts at 0, and does not advance unless it is running.

Fixes: QTBUG-126316
Change-Id: I7d455191ea44b9c014f53140528c4947d345788b
Reviewed-by: Nicholas Bennett <nicholas.bennett@qt.io>
Reviewed-by: Andy Nichols <andy.nichols@qt.io>
(cherry picked from commit 0426f2ba1ed6b981c26702dfc5448977ae2d21e3)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>